--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div id = "box1">
 
 	<p>
-		 <img src="firstImage.jpg" width="480" height="325" alt="Picture with a quote">
-		 <img src="secondImage.jpg" width="480" height="325" alt="Picture with a quote"><br><br>You've got 2 photos here, depicting some furniture legs that I own.  Both photos show two legs, the one on the right in each photo is obviously, worse for the wear (It's just the same items each time perceived from a different viewing angle).
+		 <img src="firstImageGI.gif" width="480" height="325" alt="Picture with a quote">
+		 <img src="secondImageGI.gif" width="480" height="325" alt="Picture with a quote"><br><br>You've got 2 photos here, depicting some furniture legs that I own.  Both photos show two legs, the one on the right in each photo is obviously, worse for the wear (It's just the same items each time perceived from a different viewing angle).
 </p>
 <br>
 <br>
@@ -24,7 +24,7 @@
 <br>		
 
 	<p>
-		 <img src="thirdImage.jpg" width="480" height="325" alt="Picture with a quote">
+		 <img src="thirdImageGI.gif" width="480" height="325" alt="Picture with a quote">
 		 <br><br>The guy at one of the home-building projects that I recently worked at (some weeks back), had some scrap (very thick -- 1 3/8 inches or better) MDF, that they had me toss into a dumpster.  It didn't make it to the dumpster.  <br><br>  I just knifed off two short slabs of the stuff with a bucksaw, and slapped it in -- in place of the "worse for the wear" leg.  <br><br>  If I knife off a third piece of said MDF, I can drill a socket into it and increse even further, the time between maintenance incidents.  <br><br>  Problem solved.  I thought you might want to look at this.
 </p>
 
